import java.util.*;
public class Compania_productora {
    String numero_RFC;
    String nombre;
    String telefonos;

    public List<Encuesta> encuestas;
    public List<Trabajadores> trabajadores;
}
