import java.sql.Time;
import java.util.*;
public class Emision {
    Date fecha;
    Time hora_inicio;
    Time hora_finalizo;
    Time duracion;

    Programa programa;
    Encuesta encuenta;
    Lugar_trabajo l_trabajo;



}
