

public class Encuesta {
    int total_encuentados;
    int aprobaciones;
    int rechazo;
    int cantidad_diferencia;
    
    Programa programa;
    Compania_productora productora;
}