import java.util.List;

public class Generos {
    String tipo_genero;
    public List<Programa> listaDeProgramas;
}
