import java.util.List;

public class Programa {
    String nombre_programa;
    boolean repeticion;
    public List<Emision> emisiones;
    public List<Encuesta> encuestas;
    Radios radio;
    Generos genero;
}
