import java.util.List;
public class Radios {
    String nombre;
    String frecuencia;
    String tipo_frecuencia;
    public List<Programa> listaDeProgramas;
    public List<Trabajadores> listaDetrabajadores;
    
 }
