public class Trabajadores {
    String nombre;
    int cedula;
    Compania_productora productora;
    Radios radio;
    Lugar_trabajo l_trabajo;
    
}
